--- a/sass/components/navigation/_menus.scss
+++ b/sass/components/navigation/_menus.scss
@@ -223,6 +223,7 @@
 				transition: opacity ease-in-out .25s, transform ease-in-out .35s;
 				transform: scale(0.5) rotateY(180deg);
 				opacity: 0;
+				border-radius: .25rem;
 				box-shadow: 0 8px 16px $color__alpha-dark;
 
 				a {
@@ -241,7 +242,7 @@
 					padding: 0 $gutter__width;
 				}
 
-				.sub-menu { margin: -48px 0 0 228px }
+				.sub-menu { margin: -48px 0 0 230px }
 
 			}
 
