--- a/assets/css/customizer-control.css
+++ b/assets/css/customizer-control.css
@@ -1,25 +1,18 @@
 .iris-strip.iris-slider.iris-alpha-slider {
-	margin-left: 8px !important;
-}
+  margin-left: 8px !important; }
 
-#customize-controls .control-section-baltic_pro .accordion-section-title,
-#customize-controls .control-section-baltic_pro .accordion-section-title:hover,
-#customize-controls .control-section-baltic_pro .accordion-section-title:focus {
-	background-color: #fff !important;
-}
+#customize-controls .control-section-baltic_pro .accordion-section-title, #customize-controls .control-section-baltic_pro .accordion-section-title:hover, #customize-controls .control-section-baltic_pro .accordion-section-title:focus {
+  background-color: #fff !important; }
 
 .control-section-baltic_pro .accordion-section-title .button {
-	margin-top: -4px;
-	margin-left: 8px;
-	font-weight: 400;
-}
+  margin-top: -4px;
+  font-weight: 400;
+  margin-left: 8px; }
 
 .pro-description {
-	padding: 1rem;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-}
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+  padding: 1rem; }
 
 .rtl .control-section-baltic_pro .accordion-section-title .button {
-	margin-right: 8px;
-	margin-left: 0;
-}
+  margin-left: 0;
+  margin-right: 8px; }
