--- a/sass/components/media/_media.scss
+++ b/sass/components/media/_media.scss
@@ -63,6 +63,12 @@ svg, svg symbol {
 	display: inline-block;
 }
 
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+	img[src$=".svg"] {
+		width: 100%;
+	}
+}
+
 @-webkit-keyframes spin {
 	0% { -webkit-transform: rotate(0deg); }
 	100% { -webkit-transform: rotate(360deg); }
