--- a/sass/components/layout/_header.scss
+++ b/sass/components/layout/_header.scss
@@ -1,6 +1,10 @@
 /** Site Header */
 .site-header {
 	background-color: $color__site-header;
+	background-attachment: scroll;
+	background-position: top center;
+	background-repeat: no-repeat;
+	background-size: cover;
 	position: relative;
 	z-index: 5;
 	transition: all .25s ease-in-out;
