--- a/sass/plugins/woocommerce/_products.scss
+++ b/sass/plugins/woocommerce/_products.scss
@@ -111,6 +111,7 @@ ul.products {
 		box-shadow: 0 8px 32px rgba( 0,0,0,.25 );
 		z-index: 1;
 	}
+	.homepage-section &,
 	.upsells.products &,
 	.related.products &,
 	.cross-sells & {
