--- a/assets/css/editor-style.css
+++ b/assets/css/editor-style.css
@@ -386,6 +386,12 @@ svg symbol {
 	display: block;
 }
 
+.wp-block-gallery {
+	margin-right: -8px;
+	margin-left: -8px;
+	padding: 0;
+}
+
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
 	img[src$=".svg"] {
 		width: 100%;
