--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -247,6 +247,7 @@ ul.products li.product .button:focus {
 	box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
 }
 
+.homepage-section .entry-product,
 .upsells.products .entry-product,
 .related.products .entry-product,
 .cross-sells .entry-product {
