--- a/sass/components/site/_site.scss
+++ b/sass/components/site/_site.scss
@@ -12,3 +12,8 @@
 ## Widgets
 --------------------------------------------------------------*/
 @import "secondary/widgets";
+
+/*--------------------------------------------------------------
+## Homepage
+--------------------------------------------------------------*/
+@import "homepage";
