--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,14 +1,14 @@
 /*!
 Theme Name: Baltic
-Theme URI: https://elevatethemes.com.au/baltic
+Theme URI: https://baltic.elevatethemes.com.au/
 Author: Elevate360
-Author URI: https://elevatethemes.com.au/
+Author URI: https://campaignkit.co/
 Description: Baltic WooCommerce Theme
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: baltic
-Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
+Tags: custom-background, custom-header, custom-logo, custom-colors, custom-menu, e-commerce, editor-style, featured-images, footer-widgets, full-width-template, microformats, theme-options, blog, left-sidebar, right-sidebar, threaded-comments, translation-ready
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
@@ -21,6 +21,30 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
 # Bootstrap Reboot
+# Elements
+# Typography
+# Forms
+# Accessibility
+# Alignments
+# Clearings
+# Vendor
+	## Preloader
+	## Slick
+# Media
+	## Captions
+	## Galleries
+# Navigation
+	## Menu Toggles
+	## Menus
+	## Social Links
+	## Breadcrumb
+	## Posts Navigation
+# Site
+	## Posts and pages
+	## Comments
+	## Widgets
+# Layout
+# Media Queries
 --------------------------------------------------------------*/
 @import "variables";
 @import "mixins";
@@ -63,7 +87,7 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 /*--------------------------------------------------------------
 # Vendor
 --------------------------------------------------------------*/
-@import "vendor/preloader";
+@import "vendor/vendor";
 
 /*--------------------------------------------------------------
 # CF7
