--- a/sass/components/site/_homepage.scss
+++ b/sass/components/site/_homepage.scss
@@ -10,6 +10,10 @@
 	padding-bottom: $gutter__width*2;
 }
 
+.homepage-description {
+	margin-bottom: $gutter__width*3;
+}
+
 /** Slider */
 .baltic-homepage-slider {
 
@@ -20,12 +24,37 @@
 }
 
 .slide-inner {
-	text-align: center;
-	padding: $gutter__width*8 $gutter__width*2;
+	background-position: center center;
+	background-attachment: scroll;
+	background-position: top center;
+	background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.slide-content {
 	max-width: 720px;
-	margin-left: auto;
-	margin-right: auto;
-	min-height: 60vh;
+	padding: $gutter__width*4 $gutter__width*4;
+	@include respond-to( medium ) {
+		padding-top: 0;
+		padding-bottom: 0;
+	}
+}
+
+.slide-title {
+	font-weight: bold;
+}
+
+.slide-description {
+	@include font-size(1.125);
+	padding: $gutter__width 0;
+}
+
+.slide-title,
+.slide-description {
+	text-shadow: 0 4px 8px rgba(0,0,0,.25);
 }
 
 .slide-button-1,
@@ -34,12 +63,152 @@
 	margin: 0 5px;
 }
 
+/** Product Categories */
+.product-categories__wrapper {
+	display: grid;
+	justify-content: stretch;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+}
+
+.product-categories__item {
+	background-color: $color__text-main;
+	width: 100%;
+	position: relative;
+	overflow: hidden;
+	z-index: 0;
+}
+
+.product-categories__inner {
+	color: $color__white;
+	padding: $gutter__width*2;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0.65+0,0+100;Neutral+Density */
+	background: -moz-linear-gradient(top, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+	@include respond-to( medium ) {
+		padding: $gutter__width*4;
+	}
+}
+
+.product-categories__thumbnail {
+	background-position: top center;
+	background-size: cover;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+}
+
+@include respond-to( medium ) {
+
+	@for $i from 2 through 6 {
+		.total-items-#{$i} {
+			grid-template-columns: repeat( #{$i}, 1fr );
+		}
+	}
+
+	.product-categories__wrapper {
+		&.total-items-3 .item-1{
+		    grid-column-start: 1;
+		    grid-column-end: 3;
+		    grid-row-start: 1;
+		    grid-row-end: 3;
+		}
+		&.total-items-4 {
+			.item-1 {
+			    grid-column-start: 1;
+			    grid-column-end: 2;
+			    grid-row-start: 1;
+			    grid-row-end: 3;
+			}
+			.item-2 {
+			    grid-column-start: 2;
+			    grid-column-end: 4;
+			    grid-row-start: 1;
+			    grid-row-end: 2;
+			}
+			.item-3 {
+			    grid-column-start: 2;
+			    grid-column-end: 4;
+			    grid-row-start: 2;
+			    grid-row-end: 3;
+			}
+			.item-4 {
+			    grid-column-start: 4;
+			    grid-column-end: 5;
+			    grid-row-start: 1;
+			    grid-row-end: 3;
+			}
+		}
+
+		&.total-items-5 {
+			.item-1 {
+			    grid-column-start: 1;
+			    grid-column-end: 4;
+			    grid-row-start: 1;
+			    grid-row-end: 3;
+			}
+			.item-2,
+			.item-3 {
+    			grid-column-start: 4;
+    			grid-column-end: 6;
+			}
+			.item-4 {
+				grid-column-start: 1;
+				grid-column-end: 3;
+			}
+			.item-5 {
+				grid-column-start: 3;
+				grid-column-end: 6;
+			}
+		}
+
+		&.total-items-6 {
+			.item-1 {
+			    grid-column-start: 1;
+			    grid-column-end: 4;
+			    grid-row-start: 1;
+			    grid-row-end: 3;
+			}
+			.item-2 {
+			    grid-column-start: 4;
+			    grid-column-end: 7;
+			    grid-row-start: 1;
+			    grid-row-end: 2;
+			}
+			.item-3 {
+			    grid-column-start: 4;
+			    grid-column-end: 7;
+			    grid-row-start: 2;
+			    grid-row-end: 3;
+			}
+			.item-4 {
+			    grid-column-start: 1;
+			    grid-column-end: 3;
+			}
+			.item-5 {
+			    grid-column-start: 3;
+			    grid-column-end: 5;
+			}
+			.item-6 {
+			    grid-column-start: 5;
+			    grid-column-end: 7;
+			}
+		}
+
+	}
+
+}
 
 /** Products section */
 .homepage-products {
 
 	.baltic-slick-dots {
-		bottom: -1rem;
+		bottom: -1.5rem;
 	}
 
 	.baltic-slick-dots li button {
@@ -47,6 +216,10 @@
 		width: .5rem;
 		height: .5rem;
 		border-radius: .5rem;
+	}
+
+	ul.products li.product {
+		padding-top: $gutter__width;
 	}
 
 }
