--- a/style.css
+++ b/style.css
@@ -3947,8 +3947,7 @@ a.custom-logo-link {
 	margin-left: -10px;
 }
 
-.columns .column-item,
-.columns .entry {
+.columns .column-item {
 	float: left;
 	width: 100%;
 	padding-right: 10px;
