--- a/sass/components/site/_homepage.scss
+++ b/sass/components/site/_homepage.scss
@@ -6,8 +6,10 @@
 }
 
 .homepage-section {
+	position: relative;
 	padding-top: $gutter__width*2;
 	padding-bottom: $gutter__width*2;
+	z-index: 0;
 }
 
 .homepage-description {
@@ -21,6 +23,15 @@
 		margin-left: auto;
 		margin-right: auto;
 	}
+}
+
+.homepage-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
 }
 
 /** Slider */
